After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794500 - ssh-agent: Password prompt not worded well
ssh-agent: Password prompt not worded well
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: ssh-agent
3.28.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2018-03-19 21:12 UTC by Jeremy Bicha
Modified: 2018-03-20 08:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (397.47 KB, image/png)
2018-03-19 21:15 UTC, Jeremy Bicha
  Details
ssh-agent: Don't be too verbose on password prompt (1.23 KB, patch)
2018-03-20 02:40 UTC, Daiki Ueno
committed Details | Review
login: Use the same label as before when storing password (1.84 KB, patch)
2018-03-20 07:36 UTC, Daiki Ueno
committed Details | Review

Description Jeremy Bicha 2018-03-19 21:12:57 UTC
Ubuntu 18.04 Beta
gnome-keyring 3.28.0 (built in my PPA based on Debian's package)
openssh-client 1:7.6p1-4

The ssh-agent password prompt looks like it has a few extra duplicate words. Screenshot attached.

Title
-----
Enter password to unlock the private key

Text
----
An application wants access to the private key "Unlock password for: Name <user@email.com>", but it is locked

Suggested Replacement Text
--------------------------
1. An application wants access to the private key "Name <user@email.com>", but it is locked

or

2. Unlock password for: Name <user@email.com>"
Comment 1 Jeremy Bicha 2018-03-19 21:15:26 UTC
Created attachment 369876 [details]
screenshot

#1 is the wording from gnome-keyring 3.27.4 so this bug is a regression.
Comment 2 Daiki Ueno 2018-03-20 02:40:27 UTC
Created attachment 369887 [details] [review]
ssh-agent: Don't be too verbose on password prompt

This partially reverts the change in 869b5c6d, so as not to display
duplicate words on the password prompt.
Comment 3 Daiki Ueno 2018-03-20 07:36:50 UTC
Created attachment 369892 [details] [review]
login: Use the same label as before when storing password
Comment 4 Daiki Ueno 2018-03-20 08:51:35 UTC
Attachment 369887 [details] pushed as afbdb0a - ssh-agent: Don't be too verbose on password prompt
Attachment 369892 [details] pushed as b70a10e - login: Use the same label as before when storing password