ssh-agent: Don't be too verbose on password prompt

This partially reverts the change in 869b5c6d, so as not to display
duplicate words on the password prompt.

https://bugzilla.gnome.org/show_bug.cgi?id=794500